layout tweaks: improved spacing and stuff.  MOST ie bugs squashed... tabs in ie8 are still funny
git-svn-id: http://code.creativecommons.org/svnroot/ccsearch/branches/iframe-pretty@13109 aec4f576-4910-0410-beeb-ecb0427469e7

--- a/search-ie.css
+++ b/search-ie.css
@@ -7,18 +7,20 @@
  */
 
 
+#left{
+  width: 350px;
+	margin-left: 15px;
+}
+
+#right{
+
+}
 /* Transparent png's */
 img.png {
 	behavior: url("pngie.htc");
 }
 
-#header {
-	padding-bottom: 20px;
-}
-
 #subNFO { margin: 0; }
-#subCC { margin: 0; }
-#subBreak { margin: 0; }
 
 #menu {
 	margin-top: 5px;
@@ -26,14 +28,13 @@ img.png {
 	height: auto;
 }
 
-#results {
-	width: 99%;
-}
 
 .google { margin-bottom: 0px; }
 
 ul.tabs {
 	margin-bottom: 0px;
+	height: 20px;
+	overflow: hidden;
 }
 
 ul.tabs li {
@@ -54,13 +55,13 @@ ul.tabs li.active {
 	border-bottom: none;
 }
 
-
+/*
 #flickr { padding-top: 5px; margin: 0;}
 #yahoo  { padding-top: 8px; }
 #google { padding-top: 3px;}
 
 li.active#yahoo { padding-top: 12px !important;	}
-
+*/
 ul.tabs img {
 	padding-top: 0;
 	padding-bottom: 0px;
