--- a/search.css
+++ b/search.css
@@ -76,6 +76,7 @@ a, a:link, a:visited {
    background: #5aa322;
    padding: 0px;
    text-align: left;
+   padding-bottom: 0px;
 }
 
 #header a {
@@ -187,7 +188,8 @@ a, a:link, a:visited {
    background: #456724;
    width: 100%;
    text-align: right;
-   padding: 3px 0;
+   padding: 3px 0px;
+   margin-bottom: 0px;
 }
 
 a#aboutsearch{
@@ -257,7 +259,8 @@ a#remove-frame-button:hover {
 }
 
 #left {
-	display: inline-block;
+	display: inline;
+	float: left;
    margin: 0px;
    padding: 10px 0px 0px 0px;
    vertical-align: top;
@@ -273,14 +276,11 @@ a#remove-frame-button:hover {
 }
 
 #right {
-   display: inline-block;
+	float: left;
+   display: inline;
 	font-size: 0.8em;
 	margin: none;
    border: none;
-	/*border-right: 1px solid #C0C0C0;*/
-	/*border-left: 1px dashed #EDEDED;*/
-	/*border-bottom: 1px solid #C0C0C0;
-	border: 1px solid #C0C0C0;*/
 	padding: 0px 5px 0px 15px;
    color: white;
 }
@@ -292,6 +292,7 @@ a#remove-frame-button:hover {
 }
 
 #right legend{
+   color: #fff;
    font-size: 1.15em;
    padding-left: 5px;
    padding-top: 5px;
